--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^1.3.3",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "firebase": "^9.17.1",
     "vue": "^3.2.13",
+    "vue-loading-overlay": "^6.0.6",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5"
   },
