--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.17.1",
     "vue": "^3.2.13",
     "vue-loading-overlay": "^6.0.6",
+    "vue-next-select": "^2.10.5",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5"
   },
